# kotoba-libre

./: .gitignore  AGENTS.md  PLAN.md  Package.swift  README.md  THIRD_PARTY_NOTICES.md  index.html  package-lock.json  package.json  skills-lock.json
.github/: CODEOWNERS
.github/workflows/: release.yml
Sources/KotobaLibreApp/: AddAgentSheetWindowController.swift  AppController.swift  AppDelegate.swift  AppSmokeTestRunner.swift  GlobalShortcutRegistrar.swift  LauncherWindowController.swift  MicrophonePermission.swift  SettingsWindowController.swift  Views.swift  VoiceTranscriptionService.swift  WebViewControllers.swift  main.swift
Sources/KotobaLibreCore/: AppDataStore.swift  AppResources.swift  KotobaLibreCore.swift
Sources/KotobaLibreSelfTest/: main.swift
Sources/ToroLibreApp/: AppController.swift  GlobalShortcutRegistrar.swift  LauncherWindowController.swift  SettingsWindowController.swift  Views.swift  WebViewControllers.swift  main.swift
Sources/ToroLibreCore/: AppDataStore.swift  ToroLibreCore.swift
Sources/ToroLibreSelfTest/: main.swift
docs/: architecture.md  development.md  release.md
docs/plans/: 2026-03-04-ui-redesign-design.md  2026-03-04-ui-redesign.md
scripts/: KotobaLibre.entitlements  build-app.sh  create-unsigned-dmg.sh  package-browser-extension.sh  package-chrome-extension.sh  package-firefox-extension.sh
scripts/ci/: semver-bump.sh  (+1 more)
src/: api.ts  main.ts  styles.css  types.ts  vite-app.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
(+11 files in other folders)
